syntax = "proto3";

package user;

import "common.proto";

option optimize_for = SPEED;

// AuthInfo is the information required to login to a server.
message AuthInfo {
  enum EncryptionType {
    UNSPECIFIED = 0;
    UNKNOWN = 1;
    PLAINTEXT = 2;
    SHA256 = 3;
    MD5 = 4;
  }
  EncryptionType encryption_type = 1;
  bytes encrypted_value = 2;
}

// User defines a user in the system.
message UserInfo {
  uint32 id = 1;
  string name = 2;
  bool is_supper = 3;
  bool can_create_db = 4;
  bool can_create_user = 5;
  bool can_login = 6;
  AuthInfo auth_info = 7;

  /// Granted privileges will be only updated through the command of GRANT/REVOKE.
  repeated GrantPrivilege grant_privileges = 8;
}

// GrantPrivilege defines a privilege granted to a user.
message GrantPrivilege {
  enum Action {
    UNSPECIFIED = 0;
    UNKNOWN = 1;
    SELECT = 2;
    INSERT = 3;
    UPDATE = 4;
    DELETE = 5;
    CREATE = 6;
    CONNECT = 7;
  }

  message ActionWithGrantOption {
    Action action = 1;
    bool with_grant_option = 2;
    uint32 granted_by = 3;
  }

  oneof object {
    uint32 database_id = 1;
    uint32 schema_id = 2;
    uint32 table_id = 3;
    uint32 source_id = 4;
    uint32 all_tables_schema_id = 5;
    uint32 all_sources_schema_id = 6;
  }
  repeated ActionWithGrantOption action_with_opts = 7;
}

message CreateUserRequest {
  UserInfo user = 1;
}

message CreateUserResponse {
  common.Status status = 1;
  uint64 version = 2;
}

message DropUserRequest {
  uint32 user_id = 1;
}

message DropUserResponse {
  common.Status status = 1;
  uint64 version = 2;
}

message UpdateUserRequest {
  enum UpdateField {
    UNKNOWN = 0;
    SUPER = 1;
    LOGIN = 2;
    CREATE_DB = 3;
    AUTH_INFO = 4;
    RENAME = 5;
    CREATE_USER = 6;
  }
  UserInfo user = 1;
  repeated UpdateField update_fields = 2;
}

message UpdateUserResponse {
  common.Status status = 1;
  uint64 version = 2;
}

message GrantPrivilegeRequest {
  repeated uint32 user_ids = 1;
  repeated GrantPrivilege privileges = 2;
  bool with_grant_option = 3;
  uint32 granted_by = 4;
}

message GrantPrivilegeResponse {
  common.Status status = 1;
  uint64 version = 2;
}

message RevokePrivilegeRequest {
  repeated uint32 user_ids = 1;
  repeated GrantPrivilege privileges = 2;
  uint32 granted_by = 3;
  uint32 revoke_by = 4;
  bool revoke_grant_option = 5;
  bool cascade = 6;
}

message RevokePrivilegeResponse {
  common.Status status = 1;
  uint64 version = 2;
}

service UserService {
  // TODO: add UpdateUser method to support `ALTER USER`, need more investigation. The FieldMask may be helpful:
  // https://developers.google.com/protocol-buffers/docs/reference/java/com/google/protobuf/FieldMask.html.
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc DropUser(DropUserRequest) returns (DropUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

  // GrantPrivilege grants a privilege to a user.
  rpc GrantPrivilege(GrantPrivilegeRequest) returns (GrantPrivilegeResponse);
  // RevokePrivilege revokes a privilege from a user.
  rpc RevokePrivilege(RevokePrivilegeRequest) returns (RevokePrivilegeResponse);
}
